--- a/index.html
+++ b/index.html
@@ -1,45 +1,64 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>KeepJS by pratikbhanushali</title>
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>KeepJS</h1>
+        <p>Keep is a simple Javascript Library used to manage your Browser Storage. It uses Cookies, Local Storage and Session Storage for this purpose</p>
 
-  <title>Keepjs</title>
-  <meta name="description" content="Keep is a simple Javascript Library used to manage your Browser Storage. It uses Cookies, Local Storage and Session Storage for this purpose">
+        <p class="view"><a href="https://github.com/pratikbhanushali/keepJS">View the Project on GitHub <small>pratikbhanushali/keepJS</small></a></p>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-</head>
+        <ul>
+          <li><a href="https://github.com/pratikbhanushali/keepJS/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/pratikbhanushali/keepJS/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/pratikbhanushali/keepJS">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h3>
+<a id="welcome-to-github-page-for-keepjs" class="anchor" href="#welcome-to-github-page-for-keepjs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Page for KeepJS.</h3>
 
-<body>
+<p>KeepJS is built with a simple use case in mind of efficiently maintaining and using web browser storage. Keep works well with Cookies, Local Storage and Session Storage.</p>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Keepjs</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">Keep is a simple Javascript Library used to manage your Browser Storage. It uses Cookies, Local Storage and Session Storage for this purpose</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/pratikbhanushali/keepJS/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/pratikbhanushali/keepJS/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/pratikbhanushali/keepJS" class="code">View Keepjs on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<p><strong>Functionalities:</strong></p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<ol>
+<li>SET Data:</li>
+</ol>
+
+<p><em>Method name:</em> <strong>keep.set()</strong></p>
+
+<p><em>Parameters:</em></p>
+
+<pre><code>**name** Identifier used to store a value in browser storage.
+**value** Value to be stored in the browser storage.
+**storage** Optional: Defaults to Cookies. Possible values are 'C'(Cookies) / 'L'(localStorage) / 'S'(session storage).
+**sess** Optional: Defaults to true. Used to set cookie as session cookie or persistant cookie. Possible values are true / false.
+**expires** Optional: Sets a cookie with an expiry. This key is used only when @sess = true. Use the Javascript Date function to pass expiry E.g. ("Mon, 4 Nov 2100 13:00:00 GMT")
+**path** Optional: Defaults to '/'.
+**encrypt** Optional: This key if set to boolean true, will encrypt data that goes into store.
+</code></pre>
+
+<p>P.S : <strong>encrypt</strong> - DO NOT SET THIS TO true IF YOU WANT TO USE COOKIE DATA SERVER-SIDE.</p>
+
+<p><em>Example :</em></p>
+
+<p>keep.set({ <strong>name:</strong> "cookie-name", <strong>value:</strong> "Hello World!", <strong>sess:</strong> false, <strong>expires:</strong> "Mon, 4 Nov 2100 13:00:00 GMT", <strong>encrypt:</strong> true });</p>
+
+<p><a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a></p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
@@ -60,26 +79,13 @@
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-        </article>
-      </div>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/pratikbhanushali">pratikbhanushali</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/pratikbhanushali" class="avatar"><img src="https://avatars3.githubusercontent.com/u/7998674?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/pratikbhanushali">pratikbhanushali</a> maintains <a href="https://github.com/pratikbhanushali/keepJS">Keepjs</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/pratikbhanushali/keepJS/tarball/master" class="tar">tar</a><a href="https://github.com/pratikbhanushali/keepJS/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
