--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
 
 <p><em>Method name:</em> <strong>keep.set()</strong></p>
 
-<p><em>Parameters:</em><br>
-    <strong>name</strong> Identifier used to store a value in browser storage.<br>
-    <strong>value</strong> Value to be stored in the browser storage.<br>
-    <strong>storage</strong> Optional: Defaults to Cookies. Possible values are 'C'(Cookies) / 'L'(localStorage) / 'S'(session storage).<br>
-    <strong>sess</strong> Optional: Defaults to true. Used to set cookie as session cookie or persistant cookie. Possible values are true / false.<br>
-    <strong>expires</strong> Optional: Sets a cookie with an expiry. This key is used only when <strong>sess</strong> = true. Use the Javascript Date function to pass expiry E.g. ("Mon, 4 Nov 2100 13:00:00 GMT")<br>
-    <strong>path</strong> Optional: Defaults to '/'.<br>
-    <strong>encrypt</strong> Optional: This key if set to boolean true, will encrypt data that goes into store.  </p>
+<p><em>Parameters:</em>     </p>
+
+<p><strong>name</strong>    Identifier used to store a value in browser storage.<br>
+<strong>value</strong>   Value to be stored in the browser storage.<br>
+<strong>storage</strong> Optional: Defaults to Cookies. Possible values are 'C'(Cookies) / 'L'(localStorage) / 'S'(session storage).<br>
+<strong>sess</strong>    Optional: Defaults to true. Used to set cookie as session cookie or persistant cookie. Possible values are true / false.<br>
+<strong>expires</strong> Optional: Sets a cookie with an expiry. This key is used only when <strong>sess</strong> = true. Use the Javascript Date function to pass expiry E.g. ("Mon, 4 Nov 2100 13:00:00 GMT")<br>
+<strong>path</strong>    Optional: Defaults to '/'.<br>
+<strong>encrypt</strong> Optional: This key if set to boolean true, will encrypt data that goes into store.  </p>
 
 <p>P.S : <strong>encrypt</strong> - DO NOT SET THIS TO true IF YOU WANT TO USE COOKIE DATA SERVER-SIDE.  </p>
 
