Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p><em>Example :</em>   </p>
 
-<p><code>keep.set({ name : _"identifier-name"_, value: _"Hello World!"_, sess: _false_, expires: _"Mon, 4 Nov 2100 13:00:00 GMT"_, storage: _"C"_,  encrypt: _true_ });</code></p>
+<p><code>keep.set({ name : "identifier-name", value: "Hello World!", sess: false, expires: "Mon, 4 Nov 2100 13:00:00 GMT", storage: "C",  encrypt: true });</code></p>
 
 <p><em>Parameters:</em>   </p>
 
@@ -63,11 +63,11 @@
 
 <p><em>Example :</em>     </p>
 
-<p><code>keep.get({ name : _"identifier-name"_ });</code>    </p>
+<p><code>keep.get({ name : "identifier-name" });</code>    </p>
 
 <p><em>Parameters:</em>   </p>
 
-<p><strong>name</strong>       <em>Identifier used to store a value in browser storage.</em>  </p>
+<p><strong>name</strong>       <em>Identifier used to store a value in browser storage.</em>      </p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
